--- a/resumesite/templates/home.html
+++ b/resumesite/templates/home.html
@@ -79,12 +79,11 @@
 				<ul class="keySkills">
 					<li>Python</li>
 					<li>HTML</li>
-					<li>MS Office</li>
-					<li>Time management</li>
-					<li>Database</li>
-					<li>Data Analytics</li>
-					<li>Critical thinking</li>
-					<li>Adaptability</li>
+					<li>Bootstrap</li>
+					<li>Django</li>
+					<li>SQL</li>
+					<li>Heroku</li>
+					<li>Postgresql</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
