--- a/resumesite/templates/home.html
+++ b/resumesite/templates/home.html
@@ -89,6 +89,20 @@
 			<div class="clear"></div>
 		</section>
 
+		<section>
+			<div class="sectionTitle">
+				<h1>Projects</h1>
+			</div>
+
+			<div class="sectionContent">
+				<ul class="keySkills">
+					<li><a href="http://jjtodoapp.herokuapp.com" target="_blank" rel="noopener">To-do app</a></li>
+				</ul>
+			</div>
+			<div class="clear"></div>
+		</section>
+
+
 		<br>
 		
 		<section>
