added a new project

--- a/resumesite/templates/home.html
+++ b/resumesite/templates/home.html
@@ -97,6 +97,7 @@
 			<div class="sectionContent">
 				<ul class="keySkills">
 					<li><a href="http://jjtodoapp.herokuapp.com" target="_blank" rel="noopener">To-do app</a></li>
+					<li><a href="http://jurls.herokuapp.com/" target="_blank" rel="noopener">Link shortner</a></li>
 				</ul>
 			</div>
 			<div class="clear"></div>
