--- a/resumesite/templates/home.html
+++ b/resumesite/templates/home.html
@@ -98,6 +98,7 @@
 				<ul class="keySkills">
 					<li><a href="http://jjtodoapp.herokuapp.com" target="_blank" rel="noopener">To-do app</a></li>
 					<li><a href="http://jurls.herokuapp.com/" target="_blank" rel="noopener">Link shortner</a></li>
+					<li><a href="https://jayheroapi.herokuapp.com/" target="_blank" rel="noopener">Heroes&Villains API</a></li>
 				</ul>
 			</div>
 			<div class="clear"></div>
